[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/locations/player_checkpoint/Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://assets/player/spaceStation_020.png" type="Texture" id=2]
[ext_resource path="res://core/characters/modules/debug/Debug.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 586.15

[node name="Checkpoint" type="Area2D"]
collision_layer = 64
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, -83 )

[node name="Muzzle" type="Position2D" parent="Gun"]

[node name="TimerRPM" type="Timer" parent="."]
wait_time = 0.6

[node name="Debug" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Checkpoint_body_exited"]
[connection signal="timeout" from="TimerRPM" to="." method="_on_TimerRPM_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
